# SimpleManyCoreSim

./: .gitignore  CMakeLists.txt  CPU.cpp  CPU.hpp  Cache.hpp  CoreBlock.cpp  CoreBlock.hpp  GlobalMemoryController.cpp  GlobalMemoryController.hpp  IniReader.hpp  MMU.cpp  MMU.h  Message.hpp  Processor.hpp  README.md  Router.cpp  Router.hpp  SimConfig.cpp  SimConfig.hpp  SimpleManyCoreSim.sln  SimpleManyCoreSim.vcxproj  SimpleManyCoreSim.vcxproj.filters  SimpleManyCoreSim2010.sln  SimpleManyCoreSim2010.vcxproj  SimpleManyCoreSim2010.vcxproj.filters  TODO.txt  Task.cpp  Task.hpp  TaskBlock.cpp  TaskBlock.hpp  Thread.hpp  Tile.cpp  Tile.hpp  VisualCXXCompatibility.hpp  code todo.txt  simutil.cpp  simutil.hpp
benchmark/: Makefile  envsetup  helloworld  helloworld.c  helloworld.ini  make.py  matrix_ans.c  matrix_config.h  matrix_simple  matrix_simple.c  matrix_simple.ini  matrix_simple_16  matrix_simple_16.ini  matrix_simple_256  matrix_simple_256.ini
benchmark/binaries/: helloworld.ini  matrix_simple_128_128_1.ini  matrix_simple_128_16_8.ini  matrix_simple_128_1_128.ini  matrix_simple_128_2_64.ini  matrix_simple_128_32_4  matrix_simple_128_32_4.ini  matrix_simple_128_4_32.ini  matrix_simple_128_64_2.ini  matrix_simple_128_8_16.ini  matrix_simple_16_16_1  matrix_simple_16_16_1.ini  matrix_simple_16_1_16.ini  matrix_simple_16_2_8.ini  matrix_simple_16_4_4.ini  matrix_simple_16_8_2.ini  matrix_simple_256_128_2.ini  matrix_simple_256_16_16.ini  matrix_simple_256_1_256.ini  matrix_simple_256_256_1  matrix_simple_256_256_1.ini  matrix_simple_256_2_128.ini  matrix_simple_256_32_8.ini  matrix_simple_256_4_64.ini  matrix_simple_256_64_4.ini  matrix_simple_256_8_32.ini  matrix_simple_32_16_2.ini  matrix_simple_32_1_32.ini  matrix_simple_32_2_16  matrix_simple_32_2_16.ini  matrix_simple_32_32_1.ini  matrix_simple_32_4_8.ini  matrix_simple_32_8_4.ini  matrix_simple_512_128_4.ini  matrix_simple_512_16_32.ini  matrix_simple_512_1_512  matrix_simple_512_1_512.ini  matrix_simple_512_256_2.ini  matrix_simple_512_2_256.ini  matrix_simple_512_32_16.ini  (+12 more)
benchmark/inputs/: matrix128_A.txt  matrix128_B.txt  matrix16_A.txt  matrix16_B.txt  (+8 more)
simconfig/: example.ini  processor_16_1_4.ini  processor_16_2_2.ini  processor_16_4_1.ini  processor_64_1_8.ini  processor_64_2_4.ini  processor_64_4_2.ini  processor_64_8_1.ini
src/: Address.cpp  Address.hpp  CPU.cpp  CPU.hpp  Cache.cpp  Cache.hpp  Core.cpp  Core.hpp  CoreBlock.cpp  CoreBlock.hpp  Debug.hpp  Dimension.hpp  GlobalMemoryController.cpp  GlobalMemoryController.hpp  IniLoader.cpp  IniLoader.h  IniLoader.hpp  IniReader.cpp  IniReader.hpp  MMU.cpp  MMU.hpp  Message.cpp  Message.hpp  Processor.cpp  Processor.hpp  Program.hpp  Router.cpp  Router.hpp  SimConfig.cpp  SimConfig.hpp  Task.cpp  Task.hpp  TaskBlock.cpp  TaskBlock.hpp  Thread.cpp  Thread.hpp  Tile.cpp  Tile.hpp  main.cpp  simutil.cpp  (+1 more)
tools/: build_all.sh  run_all.sh  scan_boost.sh
(+7 files in other folders)
